<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NextActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="50dp"
            android:textStyle="bold"
            android:textSize="24sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="PERSON HAVE LUNG CANCER" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Enter Age">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etAge"
                android:inputType="number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:textSize="20sp"
                android:text="@string/gender"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <RadioGroup
                android:id="@+id/rbgGender"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:layout_width="wrap_content"
                    android:text="Male"
                    android:layout_height="wrap_content"/>

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:layout_marginStart="20dp"
                    android:layout_width="wrap_content"
                    android:text="Female"
                    android:layout_height="wrap_content"/>

            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:textSize="20sp"
                android:text="@string/smoking"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <RadioGroup
                android:id="@+id/rbgSmoking"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:layout_width="wrap_content"
                    android:text="Yes"
                    android:layout_height="wrap_content"/>

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:layout_marginStart="20dp"
                    android:layout_width="wrap_content"
                    android:text="No"
                    android:layout_height="wrap_content"/>

            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:textSize="20sp"
                android:text="@string/yellowfingers"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <RadioGroup
                android:id="@+id/rbgYellowFingers"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:layout_width="wrap_content"
                    android:text="Yes"
                    android:layout_height="wrap_content"/>

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:layout_marginStart="20dp"
                    android:layout_width="wrap_content"
                    android:text="No"
                    android:layout_height="wrap_content"/>

            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:textSize="20sp"
                android:text="@string/anxiety"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <RadioGroup
                android:id="@+id/rbgAnxiety"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:layout_width="wrap_content"
                    android:text="Yes"
                    android:layout_height="wrap_content"/>

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:layout_marginStart="20dp"
                    android:layout_width="wrap_content"
                    android:text="No"
                    android:layout_height="wrap_content"/>

            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:textSize="20sp"
                android:text="@string/peerpressure"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <RadioGroup
                android:id="@+id/rbgPeerPressure"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:layout_width="wrap_content"
                    android:text="Yes"
                    android:layout_height="wrap_content"/>

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:layout_marginStart="20dp"
                    android:layout_width="wrap_content"
                    android:text="No"
                    android:layout_height="wrap_content"/>

            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:textSize="20sp"
                android:text="@string/chornicdisease"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <RadioGroup
                android:id="@+id/rbgChornicDisease"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:layout_width="wrap_content"
                    android:text="Yes"
                    android:layout_height="wrap_content"/>

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:layout_marginStart="20dp"
                    android:layout_width="wrap_content"
                    android:text="No"
                    android:layout_height="wrap_content"/>

            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:textSize="20sp"
                android:text="@string/fatigue"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <RadioGroup
                android:id="@+id/rbgFatigue"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:layout_width="wrap_content"
                    android:text="Yes"
                    android:layout_height="wrap_content"/>

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:layout_marginStart="20dp"
                    android:layout_width="wrap_content"
                    android:text="No"
                    android:layout_height="wrap_content"/>

            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:textSize="20sp"
                android:text="@string/allergy"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <RadioGroup
                android:id="@+id/rbgAllergy"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:layout_width="wrap_content"
                    android:text="Yes"
                    android:layout_height="wrap_content"/>

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:layout_marginStart="20dp"
                    android:layout_width="wrap_content"
                    android:text="No"
                    android:layout_height="wrap_content"/>

            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:textSize="20sp"
                android:text="@string/wheezing"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <RadioGroup
                android:id="@+id/rbgWheezing"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:layout_width="wrap_content"
                    android:text="Yes"
                    android:layout_height="wrap_content"/>

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:layout_marginStart="20dp"
                    android:layout_width="wrap_content"
                    android:text="No"
                    android:layout_height="wrap_content"/>

            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:textSize="20sp"
                android:text="@string/alcoholconsuming"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <RadioGroup
                android:id="@+id/rbgAlcoholConsuming"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:layout_width="wrap_content"
                    android:text="Yes"
                    android:layout_height="wrap_content"/>

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:layout_marginStart="20dp"
                    android:layout_width="wrap_content"
                    android:text="No"
                    android:layout_height="wrap_content"/>

            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:textSize="20sp"
                android:text="@string/coughing"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <RadioGroup
                android:id="@+id/rbgCoughing"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:layout_width="wrap_content"
                    android:text="Yes"
                    android:layout_height="wrap_content"/>

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:layout_marginStart="20dp"
                    android:layout_width="wrap_content"
                    android:text="No"
                    android:layout_height="wrap_content"/>

            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:textSize="20sp"
                android:text="@string/shortnessofbreth"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <RadioGroup
                android:id="@+id/rbgShortnessOfBreth"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:layout_width="wrap_content"
                    android:text="Yes"
                    android:layout_height="wrap_content"/>

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:layout_marginStart="20dp"
                    android:layout_width="wrap_content"
                    android:text="No"
                    android:layout_height="wrap_content"/>

            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:textSize="20sp"
                android:text="@string/swallowingdifficulty"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <RadioGroup
                android:id="@+id/rbgSwallowingDifficulty"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:layout_width="wrap_content"
                    android:text="Yes"
                    android:layout_height="wrap_content"/>

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:layout_marginStart="20dp"
                    android:layout_width="wrap_content"
                    android:text="No"
                    android:layout_height="wrap_content"/>

            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:textSize="20sp"
                android:text="@string/chestpain"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <RadioGroup
                android:id="@+id/rbgChestPain"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:layout_width="wrap_content"
                    android:text="Yes"
                    android:layout_height="wrap_content"/>

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:layout_marginStart="20dp"
                    android:layout_width="wrap_content"
                    android:text="No"
                    android:layout_height="wrap_content"/>

            </RadioGroup>

        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSubmit"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="100dp"
            android:layout_marginStart="100dp"
            android:layout_marginEnd="100dp"
            android:layout_width="match_parent"
            android:textAllCaps="false"
            android:text="Submit"
            android:layout_height="wrap_content"/>

    </LinearLayout>

</ScrollView>